crates/cribo/tests/snapshots/bundled_code@ast_rewriting_comprehension_target_scope.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_comprehension_target_scope/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('pkg.data', '_cribo_init___cribo_aa5717_pkg_data', 'pkg_data', False)
_cribo_finder.register('pkg.helper', '_cribo_init___cribo_e61774_pkg_helper', 'pkg_helper', False)
_cribo_finder.register('pkg', None, 'pkg', True)
pkg = _cribo.types.SimpleNamespace(__name__='pkg')
pkg_data = _cribo.types.SimpleNamespace(__name__='pkg.data', __initializing__=False, __initialized__=False)
_cribo_finder.bind('pkg.data', pkg_data)
pkg.data = pkg_data
pkg_helper = _cribo.types.SimpleNamespace(__name__='pkg.helper', __initializing__=False, __initialized__=False)
_cribo_finder.bind('pkg.helper', pkg_helper)
pkg.helper = pkg_helper
def _cribo_init___cribo_aa5717_pkg_data(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'pkg'
    global pkg_helper
    items = [x for x in range(5)]
    self.items = items
    pkg_helper = _cribo_init___cribo_e61774_pkg_helper(pkg_helper)
    transform = pkg.helper.transform
    self.transform = transform
    self.transform = transform
    x = len(items)
    self.x = x
    result = transform(x)
    self.result = result
    self.__initialized__ = True
    self.__initializing__ = False
    return self
pkg_data.__init__ = _cribo_init___cribo_aa5717_pkg_data
def _cribo_init___cribo_e61774_pkg_helper(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'pkg'
    global pkg_data
    pkg_data = _cribo_init___cribo_aa5717_pkg_data(pkg_data)
    items = pkg.data.items
    self.items = items
    self.items = items

    def transform(val):
        return val * len(items)
    transform.__module__ = 'pkg.helper'
    transform.__qualname__ = 'transform'
    self.transform = transform
    self.__initialized__ = True
    self.__initializing__ = False
    return self
pkg_helper.__init__ = _cribo_init___cribo_e61774_pkg_helper
pkg_data = _cribo_init___cribo_aa5717_pkg_data(pkg_data)
result = pkg.data.result
print(f"result: {result}")
data = pkg.data
helper = pkg.helper
