crates/cribo/tests/snapshots/bundled_code@ast_rewriting_entry_func_def_renames.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_entry_func_def_renames/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _ModuleType=_cribo.types.ModuleType, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _ModuleType(spec.name)
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                fresh._cribo_fresh_life = True
                return fresh
            return module
        module = _ModuleType(spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _getattr=getattr, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        record_snapshot = not _getattr(module, '_cribo_fresh_life', False)
        if init is None:
            if record_snapshot and key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if record_snapshot and key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('helpers', None, None, False, {'make_tag': 'make_tag_2', 'Schema': 'Schema_2', 'DEFAULT_MODE': 'DEFAULT_MODE_2'})
helpers = _cribo.types.SimpleNamespace(__name__='helpers', __doc__='\nHelper module that defines symbols colliding with the entry module.\nThe conflict resolver will rename one copy; this fixture verifies that\ndefinition-time expressions (decorators, defaults, annotations) in entry\nmodule functions are rewritten to use the renamed identifiers.\n')
"""\nHelper module that defines symbols colliding with the entry module.\nThe conflict resolver will rename one copy; this fixture verifies that\ndefinition-time expressions (decorators, defaults, annotations) in entry\nmodule functions are rewritten to use the renamed identifiers.\n"""
def make_tag_2(func):
    """Decorator that tags a function's return value."""

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'helpers'), _cribo_f)[1])
    def wrapper(*args, **kwargs):
        return f"[helpers.tagged] {func(*args, **kwargs)}"
    return wrapper
make_tag_2.__module__ = 'helpers'
make_tag_2.__name__ = 'make_tag'
make_tag_2.__qualname__ = 'make_tag'
DEFAULT_MODE_2 = "helpers_mode"
class Schema_2:
    """Type used for annotations."""
    kind = "helpers"

    @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'helpers'), _cribo_f)[1])
    def __repr__(self):
        return f"Schema(kind={self.kind!r})"
Schema_2.__module__ = 'helpers'
Schema_2.__name__ = 'Schema'
Schema_2.__qualname__ = 'Schema'
helpers.DEFAULT_MODE = DEFAULT_MODE_2
helpers.Schema = Schema_2
helpers.make_tag = make_tag_2
_cribo_captured['make_tag_2'] = make_tag_2
_cribo_captured['Schema_2'] = Schema_2
_cribo_captured['DEFAULT_MODE_2'] = DEFAULT_MODE_2
"""\nTest that entry module function definition-time expressions are rewritten\nwhen symbols are renamed due to collisions with submodule symbols.\n\nThe entry module defines make_tag, DEFAULT_MODE, and Schema which collide\nwith helpers.make_tag, helpers.DEFAULT_MODE, and helpers.Schema. The conflict\nresolver renames the entry copies. This fixture verifies that:\n  1. Decorators referencing renamed symbols are rewritten\n  2. Default parameter values referencing renamed symbols are rewritten\n  3. Type annotations referencing renamed symbols are rewritten\n  4. Function bodies are NOT rewritten (Python resolves at call time)\n"""
DEFAULT_MODE_1 = helpers.DEFAULT_MODE
DEFAULT_MODE = DEFAULT_MODE_1
def make_tag_1(func):
    """Entry module's own decorator - collides with helpers.make_tag."""

    def wrapper(*args, **kwargs):
        return f"[entry.tagged] {func(*args, **kwargs)}"
    return wrapper
make_tag = make_tag_1
DEFAULT_MODE_1 = "entry_mode"
class Schema_1:
    """Entry module's own Schema - collides with helpers.Schema."""
    kind = "entry"

    def __repr__(self):
        return f"Schema(kind={self.kind!r})"
Schema = Schema_1
@make_tag_1
def decorated_func(data):
    """Function decorated with the entry module's make_tag."""
    return f"decorated:{data}"
def func_with_default(data, mode=DEFAULT_MODE_1):
    """Function with default value referencing entry module's DEFAULT_MODE."""
    return f"{mode}:{data}"
def func_with_annotation(data: Schema_1=None) -> Schema_1:
    """Function with annotations referencing entry module's Schema."""
    if data is None:
        return Schema()
    return data
print(decorated_func("hello"))
print(func_with_default("world"))
print(func_with_default("world", "custom"))
print(repr(func_with_annotation()))
print(repr(func_with_annotation(Schema_1())))
