crates/cribo/tests/snapshots/bundled_code@ast_rewriting_global.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_global/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('module_mixed_patterns', '_cribo_init___cribo_c75306_module_mixed_patterns', 'module_mixed_patterns', False)
_cribo_finder_local.register('module_globals_dict', '_cribo_init___cribo_5101f4_module_globals_dict', 'module_globals_dict', False)
_cribo_finder_local.register('module_global_keyword', None, None, False, {'get_foo': 'get_foo', 'modify_foo': 'modify_foo'})
module_global_keyword = _cribo.types.SimpleNamespace(__name__='module_global_keyword', __doc__='Module demonstrating global keyword usage.')
"""Module demonstrating global keyword usage."""
foo_3 = "module1_foo"
def get_foo():
    """Get the module's global foo value."""
    return foo_3
get_foo.__module__ = 'module_global_keyword'
def modify_foo():
    """Modify the module's global foo using global keyword."""
    global foo_3
    foo_3 = "module1_foo_modified"
modify_foo.__module__ = 'module_global_keyword'
module_global_keyword.foo = foo_3
module_global_keyword.get_foo = get_foo
module_global_keyword.modify_foo = modify_foo
module_globals_dict = _cribo.types.SimpleNamespace(__name__='module_globals_dict', __initializing__=False, __initialized__=False)
_cribo_finder.bind('module_globals_dict', module_globals_dict)
def _cribo_init___cribo_5101f4_module_globals_dict(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = 'Module demonstrating globals() dictionary access.'
    """Module demonstrating globals() dictionary access."""
    bar = "module2_bar"
    _cribo_self.bar = bar
    baz = 42
    _cribo_self.baz = baz

    def get_bar():
        """Get bar using globals() dict."""
        return _cribo_self.__dict__["bar"]
    get_bar.__module__ = 'module_globals_dict'
    get_bar.__qualname__ = 'get_bar'
    _cribo_self.get_bar = get_bar

    def modify_bar():
        """Modify bar using globals() dict."""
        _cribo_self.__dict__["bar"] = "module2_bar_modified"
    modify_bar.__module__ = 'module_globals_dict'
    modify_bar.__qualname__ = 'modify_bar'
    _cribo_self.modify_bar = modify_bar

    def set_dynamic_global(name, value):
        """Set a global variable dynamically using globals()."""
        _cribo_self.__dict__[name] = value
    set_dynamic_global.__module__ = 'module_globals_dict'
    set_dynamic_global.__qualname__ = 'set_dynamic_global'
    _cribo_self.set_dynamic_global = set_dynamic_global

    def get_dynamic_global(name, default=None):
        """Get a global variable dynamically."""
        return _cribo_self.__dict__.get(name, default)
    get_dynamic_global.__module__ = 'module_globals_dict'
    get_dynamic_global.__qualname__ = 'get_dynamic_global'
    _cribo_self.get_dynamic_global = get_dynamic_global

    def list_module_globals():
        """List all non-built-in globals in this module."""
        return {k: v for k, v in _cribo_self.__dict__.items() if not k.startswith("__") and k not in ["get_bar", "modify_bar", "set_dynamic_global", "get_dynamic_global", "list_module_globals"]}
    list_module_globals.__module__ = 'module_globals_dict'
    list_module_globals.__qualname__ = 'list_module_globals'
    _cribo_self.list_module_globals = list_module_globals
    set_dynamic_global("dynamic1", "created_via_globals")
    set_dynamic_global("dynamic2", [1, 2, 3])
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
module_globals_dict.__init__ = _cribo_init___cribo_5101f4_module_globals_dict
module_mixed_patterns = _cribo.types.SimpleNamespace(__name__='module_mixed_patterns', __initializing__=False, __initialized__=False)
_cribo_module_mixed_patterns_foo = None
_cribo_module_mixed_patterns_counter = None
_cribo_finder.bind('module_mixed_patterns', module_mixed_patterns)
def _cribo_init___cribo_c75306_module_mixed_patterns(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = 'Module demonstrating mixed global access patterns.'
    global _cribo_module_mixed_patterns_counter, _cribo_module_mixed_patterns_foo
    """Module demonstrating mixed global access patterns."""
    foo = "module3_foo"
    _cribo_module_mixed_patterns_foo = foo
    _cribo_self.foo = _cribo_module_mixed_patterns_foo
    bar = "module3_bar"
    _cribo_self.bar = bar
    counter = 0
    _cribo_module_mixed_patterns_counter = counter
    _cribo_self.counter = _cribo_module_mixed_patterns_counter

    def get_values():
        """Get module globals using different methods."""
        direct_foo = _cribo_self.foo
        dict_bar = _cribo_self.__dict__["bar"]
        counter_val = _cribo_self.__dict__.get("counter", -1)
        return {"foo": direct_foo, "bar": dict_bar, "counter": counter_val}
    get_values.__module__ = 'module_mixed_patterns'
    get_values.__qualname__ = 'get_values'
    _cribo_self.get_values = get_values

    def modify_all():
        """Modify globals using different patterns."""
        global _cribo_module_mixed_patterns_foo, _cribo_module_mixed_patterns_counter
        _cribo_module_mixed_patterns_foo = "module3_foo_modified"
        module_mixed_patterns.foo = _cribo_module_mixed_patterns_foo
        _cribo_module_mixed_patterns_counter += 1
        module_mixed_patterns.counter = _cribo_module_mixed_patterns_counter
        _cribo_self.__dict__["bar"] = "module3_bar_modified"
        _cribo_self.__dict__["new_var"] = "dynamically_added"
    modify_all.__module__ = 'module_mixed_patterns'
    modify_all.__qualname__ = 'modify_all'
    _cribo_self.modify_all = modify_all

    def complex_global_usage():
        """Demonstrate complex global usage patterns."""
        global _cribo_module_mixed_patterns_counter
        original = _cribo_module_mixed_patterns_counter
        for i in range(3):
            _cribo_module_mixed_patterns_counter += 1

        def increment():
            global _cribo_module_mixed_patterns_counter
            _cribo_module_mixed_patterns_counter += 1
            return _cribo_module_mixed_patterns_counter
        global_keys = [k for k in _cribo_self.__dict__ if not k.startswith("_")]
        return {"original": original, "after_loop": _cribo_module_mixed_patterns_counter, "increment_func": increment, "global_count": len(global_keys)}
    complex_global_usage.__module__ = 'module_mixed_patterns'
    complex_global_usage.__qualname__ = 'complex_global_usage'
    _cribo_self.complex_global_usage = complex_global_usage
    _cribo_self.__dict__["initialized_via_globals"] = True
    exec("exec_created_var = 'created_via_exec'", _cribo_self.__dict__)
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
module_mixed_patterns.__init__ = _cribo_init___cribo_c75306_module_mixed_patterns
"""Test global namespace isolation between modules."""
foo_1 = "main_foo"
foo = foo_1
bar_1 = "main_bar"
bar = bar_1
module_globals_dict = _cribo_init___cribo_5101f4_module_globals_dict(module_globals_dict)
module_mixed_patterns = _cribo_init___cribo_c75306_module_mixed_patterns(module_mixed_patterns)
assert foo_1 == "main_foo"
assert bar_1 == "main_bar"
print("Module with global keyword:", module_global_keyword.get_foo())
print("Module with globals() dict:", module_globals_dict.get_bar())
print("Module with mixed patterns:", module_mixed_patterns.get_values())
module_global_keyword.modify_foo()
module_globals_dict.modify_bar()
module_mixed_patterns.modify_all()
print("\nAfter modifications:")
print("Module with global keyword:", module_global_keyword.get_foo())
print("Module with globals() dict:", module_globals_dict.get_bar())
print("Module with mixed patterns:", module_mixed_patterns.get_values())
assert foo_1 == "main_foo"
assert bar_1 == "main_bar"
print("\nMain's globals remain unchanged:")
print(f"foo = {foo_1}")
print(f"bar = {bar_1}")
